# fili

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN-COLLECTIONS.md  README.md  VISION.md  fastsum.py  fili  fili.py  fili.sh  filicmd.py  install.sh  rules.json  setup.py
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
assets/: app.js  index.html  style.css
fili/: commands.py  db.py  models.py  shell.py  utils.py
src/: backup.rs  config.rs  db.rs  drives.rs  main.rs  models.rs  rules.rs  scanner.rs  server.rs
tests/: test_utils.py
