[package]
name = "fili"
version = "0.1.2"
edition = "2021"
description = "Personal file intelligence system"
license = "GPL-3.0-or-later"
repository = "https://github.com/strycore/fili"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File system
walkdir = "2"
ignore = "0.4"           # .gitignore-style patterns

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
anyhow = "1"             # Error handling
thiserror = "1"          # Custom errors
directories = "5"        # XDG paths
chrono = "0.4"           # Timestamps
indicatif = "0.17"       # Progress bars
console = "0.15"         # Terminal colors/formatting
dialoguer = "0.11"       # Interactive prompts

# Parallelism
rayon = "1"

# Catalog of known Linux apps and their data locations.
# Used as the source of truth for app-ownership classification of
# settings/dotfile paths; anything not in bestiary falls through to
# fili's content-based rules.
bestiary = "0.1"

# Backup archive manifest staging
tempfile = "3"

# Config file (~/.config/fili/config.toml)
toml = "0.8"

# System info
hostname = "0.3"

# Web server (used by `fili serve`)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"

# ---------- Packaging ----------

[package.metadata.deb]
maintainer = "Mathieu Comandon <mathieucomandon@gmail.com>"
copyright = "2026, Mathieu Comandon"
extended-description = """
Personal file intelligence system — index, classify, and search
files across storage devices. Ships a CLI (fili scan / fili serve)
plus a local web UI for browsing the index.
"""
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/fili", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fili/README.md", "644"],
    ["LICENSE", "usr/share/doc/fili/LICENSE", "644"],
    ["rules.json", "usr/share/fili/rules.json", "644"],
]

[package.metadata.generate-rpm]
license = "GPL-3.0-or-later"
assets = [
    { source = "target/release/fili", dest = "/usr/bin/fili", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/fili/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/fili/LICENSE", mode = "644" },
    { source = "rules.json", dest = "/usr/share/fili/rules.json", mode = "644" },
]
